--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".CardPay">
+        </activity>
+        <activity android:name=".WalletPay">
+        </activity>
         <activity android:name=".E15">
         </activity>
         <activity android:name=".Customs">
