--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -46,6 +47,16 @@ dependencies {
     implementation 'com.hootsuite.android:nachos:1.1.1'                // material chips
     implementation 'com.google.android:flexbox:0.3.2'                  // google flexible box
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'             // range seek bar
+
+
+//    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.2'
+
+//    implementation 'com.android.support:multidex:1.0.1'
+
+//    implementation "com.squareup.okhttp3:okhttp:4.2.2"
+
+
     //Add the RxJava dependency//
 
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
@@ -58,7 +69,12 @@ dependencies {
 
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
 //add volly
-
+//    implementation 'com.github.kittinunf.fuel:fuel:2.2.1' //Core package
+//    implementation 'com.github.kittinunf.fuel:fuel-android:2.2.1' //Android
+//    implementation 'com.github.kittinunf.fuel:fuel-gson:2.2.1' //Fuel Gson
+//    implementation 'com.github.kittinunf.fuel:fuel-json:2.2.1'
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
     //
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -66,6 +82,10 @@ dependencies {
 
     ///////////////////////////
     implementation 'com.basgeekball:awesome-validation:4.2'
+    implementation 'com.chaos.view:pinview:1.4.3'
+    implementation 'com.github.msayan:otp-view:v1.0.2'
+    implementation 'com.github.mukeshsolanki:android-otpview-pinview:1.0.4'
+//    implementation 'io.konform:konform:0.1.0'
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    implementation 'com.android.support:appcompat-v7:23.0.1'
 //    implementation 'com.android.support:design:23.0.1'
