--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.primepay">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
             android:allowBackup="true"
@@ -39,7 +40,8 @@
         </activity>
         <activity
                 android:name=".ui.login.LoginActivity2"
-                android:label="@string/app_name">
+                android:label="@string/app_name"
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
