--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+
         
     }
     dependencies {
@@ -19,8 +21,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
+//        maven { url "https://dl.bintray.com/konform-kt/konform" }
 
-        
     }
 }
 
