--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.primepay">
-    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
             android:allowBackup="true"
-            android:icon="@drawable/logo_round"
+            android:icon="@drawable/primepaylogo"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@drawable/primepaylogo"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".splash"
+                  android:label="@string/app_name">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
         <activity android:name=".CardPay">
         </activity>
         <activity android:name=".WalletPay">
@@ -40,13 +50,7 @@
         </activity>
         <activity
                 android:name=".ui.login.LoginActivity2"
-                android:label="@string/app_name"
-        >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+                >
         </activity>
     </application>
 
