--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,10 +83,15 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     ///////////////////////////
+    implementation 'org.jpos:jpos:2.0.10'
+    implementation 'com.github.simbiose:Encryption:2.0.1'
     implementation 'com.basgeekball:awesome-validation:4.2'
     implementation 'com.chaos.view:pinview:1.4.3'
     implementation 'com.github.msayan:otp-view:v1.0.2'
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:1.0.4'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.zeugmasolutions.localehelper:locale-helper-android:1.0.2'
+
 //    implementation 'io.konform:konform:0.1.0'
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    implementation 'com.android.support:appcompat-v7:23.0.1'
