--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.primepay">
+          xmlns:tools="http://schemas.android.com/tools" package="com.example.primepay">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".AppClass"
+            android:hardwareAccelerated="false"
+            android:largeHeap="true"
             android:allowBackup="true"
             android:icon="@drawable/primepaylogo"
             android:label="@string/app_name"
             android:roundIcon="@drawable/primepaylogo"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".splash"
-                  android:label="@string/app_name">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".Splash"
+                  >
         </activity>
         <activity android:name=".CardPay">
         </activity>
@@ -50,7 +47,13 @@
         </activity>
         <activity
                 android:name=".ui.login.LoginActivity2"
-                >
+                android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
         </activity>
     </application>
 
