--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,50 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="com.example.primepay">
+        xmlns:tools="http://schemas.android.com/tools"
+        package="com.example.primepay">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.sunmi.perm.LED" />
+    <uses-permission android:name="com.sunmi.perm.MSR" />
+    <uses-permission android:name="com.sunmi.perm.ICC" />
+    <uses-permission android:name="com.sunmi.perm.PINPAD" />
+    <uses-permission android:name="com.sunmi.perm.SECURITY" />
 
     <application
             android:name=".AppClass"
-            android:hardwareAccelerated="false"
-            android:largeHeap="true"
             android:allowBackup="true"
+            android:hardwareAccelerated="false"
             android:icon="@drawable/primepaylogo"
             android:label="@string/app_name"
+            android:largeHeap="true"
             android:roundIcon="@drawable/primepaylogo"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Splash"
-                  >
-        </activity>
-        <activity android:name=".CardPay">
-        </activity>
-        <activity android:name=".WalletPay">
-        </activity>
-        <activity android:name=".E15">
-        </activity>
-        <activity android:name=".Customs">
-        </activity>
-        <activity android:name=".MOHE">
-        </activity>
-        <activity android:name=".MobileTopup">
-        </activity>
-        <activity android:name=".MobileBill">
-        </activity>
-        <activity android:name=".purcheseCashBack">
-        </activity>
-        <activity android:name=".cardTransfer">
-        </activity>
-        <activity android:name=".cashIn">
-        </activity>
-        <activity android:name=".electric">
-        </activity>
-        <activity android:name=".CustomKeyboard">
-        </activity>
-        <activity android:name=".ui.Purchase">
-        </activity>
-        <activity android:name=".ui.dash">
-        </activity>
+            android:theme="@style/AppTheme"
+            tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".LoadingActivity"></activity>
+        <activity android:name=".MOHEList" />
+        <activity android:name=".MOHEArab" />
+        <activity android:name=".Splash" />
+        <activity android:name=".CardPay" />
+        <activity android:name=".WalletPay" />
+        <activity android:name=".E15" />
+        <activity android:name=".Customs" />
+        <activity android:name=".MOHE" />
+        <activity android:name=".MobileTopup" />
+        <activity android:name=".MobileBill" />
+        <activity android:name=".purcheseCashBack" />
+        <activity android:name=".cardTransfer" />
+        <activity android:name=".cashIn" />
+        <activity android:name=".electric" />
+        <activity android:name=".CustomKeyboard" />
+        <activity android:name=".ui.Purchase" />
+        <activity android:name=".ui.dash" />
         <activity
                 android:name=".ui.login.LoginActivity2"
                 android:label="@string/app_name">
@@ -53,7 +47,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
