--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
-        maven { url 'http://jpos.org/maven' }
+       // maven { url 'http://jpos.org/maven' }
         maven { url 'http://download.oracle.com/maven' }
 //        maven { url "https://dl.bintray.com/konform-kt/konform" }
 
