--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
 }
 
 
@@ -60,8 +67,8 @@ dependencies {
     implementation 'com.hootsuite.android:nachos:1.1.1'                // material chips
     implementation 'com.google.android:flexbox:0.3.2'                  // google flexible box
     implementation 'com.crystal:crystalrangeseekbar:1.1.3'             // range seek bar
-
-
+    implementation 'com.tapadoo.android:alerter:5.0.0' //alerter
+    implementation 'com.loopj.android:android-async-http:1.4.10'  //async http client
 //    implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.2'
 
